--- a/public/admin/assets/css/custom.css
+++ b/public/admin/assets/css/custom.css
@@ -6,5 +6,37 @@
 .activea
 {
     filter: brightness(1.5); /* Adjust the value (0.5 in this case) to your desired brightness level */
+}
 
+body{
+    margin:0;
+    padding:0;
+}
+
+.form-container{
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    background-color: #fffdd1;
+}
+.form-control{
+    border:1px solid black;
+}
+.left,.right{
+    width:49%;
+}
+.txt-shadow{
+    text-shadow: 1px 1px 2px black;
+}
+label{
+    font-weight: bold;
+    margin-bottom:10px;
+}
+@media(max-width:968px){
+    .left,.right{
+        margin-top: 20px;
+        width:100%;
+    }
+}
+
+.old{
+    display:none;
 }
