--- a/public/master/style.css
+++ b/public/master/style.css
@@ -1,7 +1,7 @@
 body{
     /* background-color: #FFFEF2; */
-    background-color: #DEFFBD;
-    color: #73AD48;
+    background-color: #e2dcf8;
+    color: #ffffff;
 }
 .logo{
     font-family:fantasy;
@@ -18,7 +18,7 @@ body{
     z-index: 5;
 }
 .navbar{
-        background-color: #C6E9AF;
+        background-color: #bb95dc;
         /* position: sticky;
         top:10px;
         z-index: 5; */
@@ -29,7 +29,7 @@ body{
     /* border-bottom:5px solid #d7d5ae; */
 
     text-decoration: none;
-    color: #73AD48;
+    color: ffffff;
     /* border: 0; */
     transition: all 0.5s ease-in-out;
 }
@@ -57,8 +57,8 @@ body{
     /* border-bottom:5px solid #ffa45c55; */
 }
 .navBtn{
-    border: 2px solid #73AD48;
-    color:#73AD48
+    border: 2px solid #ffffff;
+    color:#ffffff
 }
 .navBtn:hover{
     background-color:#5d5d5aaa ;
@@ -92,7 +92,9 @@ background-color: #00000022;
 }
 
 .ownBtn{
-    border: 2px solid #5d5d5a;
+    background-color: #bb95dc;
+    color: white;
+    border: 2px solid #ffffff;
     transition: all 0.5s;
 }
 .ownBtn:hover{
