--- a/public/master/style.css
+++ b/public/master/style.css
@@ -1,7 +1,7 @@
 body{
     /* background-color: #FFFEF2; */
-    background-color: #e2dcf8;
-    color: #ffffff;
+    background-color: #ffffff;
+    color: #bb95dc;
 }
 .logo{
     font-family:fantasy;
