home page design changes

--- a/public/admin/assets/css/custom.css
+++ b/public/admin/assets/css/custom.css
@@ -15,7 +15,7 @@ body{
 
 .form-container{
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-    background-color: #fffdd1;
+    background-color: #bb95dc22;
 }
 .form-control{
     border:1px solid black;
