--- a/public/user/assets/login-signup.css
+++ b/public/user/assets/login-signup.css
@@ -7,7 +7,7 @@
     font-feature-settings: 'clig' off, 'liga' off;
     font-style: normal;
     /* --linkColor--:#0894b2; */
-    --hover--:#a5f4fc;
+    /* --hover--:#000; */
     
 
 }
