--- a/public/master/style.css
+++ b/public/master/style.css
@@ -16,7 +16,7 @@ body{
     z-index: 5;
 }
 .navbar{
-        background-color: #bb95dccc;
+        background-color: #bb95dc;
         /* position: sticky;
         top:10px;
         z-index: 5; */
